--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -5,6 +5,9 @@
   align-items: center;
   justify-content: center;
   max-height: 90vh;
+  box-shadow: 6px 6px black;
+  background-color: rgba(255, 255, 255, 0.499);
+  z-index: 100;
 }
 
 @media screen and (min-width: 250px) {
