--- a/src/Styles/FileUploadForm.css
+++ b/src/Styles/FileUploadForm.css
@@ -7,7 +7,7 @@
     align-items: center;
 }
 
-.int-uplloader {
+.int-uploader {
     all: unset;
     padding: 12px 15px;
     background-color: white;
@@ -39,7 +39,7 @@
         height: 400px;
     }
     
-    .int-uplloader {
+    .int-uploader {
         height: 50px;
         padding: 12px 15px;
     }
@@ -68,7 +68,7 @@
         height: 400px;
     }
     
-    .int-uplloader {
+    .int-uploader {
         height: 65px;
         padding: 12px 15px;
     }
