--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -6,7 +6,7 @@
   justify-content: center;
   max-height: 90vh;
   box-shadow: 6px 6px black;
-  background-color: rgba(255, 255, 255, 0.499);
+  /* background-color: rgba(255, 255, 255, 0.499); */
   z-index: 100;
 }
 
