--- a/src/Styles/FileUploadForm.css
+++ b/src/Styles/FileUploadForm.css
@@ -1,10 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
-.fileUploadForm {
+.file-upload-form {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    height: 100%;
+    margin: 0;
+    padding: 1.2rem;
+}
+
+.input-area {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    max-height: 200px;
 }
 
 .int-uploader {
@@ -33,60 +45,65 @@
     box-shadow: none;
 }
 
+.marker-preview {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10%;
+}
+
 @media screen and (min-width: 250px) {
-    .fileUploadForm {
+    .file-upload-form {
         width: 230px;
-        height: 400px;
     }
-    
+
     .int-uploader {
         height: 50px;
         padding: 12px 15px;
     }
-    
+
     .upload {
         width: 100%;
         max-height: 50px;
         max-width: 230px;
         font-size: 12px;
     }
-    
+
     .upload-button {
         height: 50px;
         width: 230px;
     }
-    
+
     .upload-button:active {
         width: 227px;
         height: 53px;
     }
-  }
+}
 
-  @media screen and (min-width: 350px) {
-    .fileUploadForm {
+@media screen and (min-width: 350px) {
+    .file-upload-form {
         width: 300px;
-        height: 400px;
     }
-    
+
     .int-uploader {
         height: 65px;
         padding: 12px 15px;
     }
-    
+
     .upload {
         width: 100%;
         max-height: 65px;
         max-width: 300px;
         font-size: 16px;
     }
-    
+
     .upload-button {
         height: 65px;
         width: 300px;
     }
-    
+
     .upload-button:active {
         width: 297px;
         height: 68px;
     }
-  }
+}
