--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -6,8 +6,8 @@
 }
 
 body {
-  background: rgb(223,137,194);
-  background: linear-gradient(58deg, rgba(223,137,194,0.3925945378151261) 0%, rgba(185,217,246,1) 100%);
+  /* background: rgb(223,137,194);
+  background: linear-gradient(58deg, rgba(223,137,194,0.3925945378151261) 0%, rgba(185,217,246,1) 100%); */
   height: 100vh;
   display: flex;
   align-items: center;
