--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,13 +1,14 @@
 .App {
   position: relative;
-  border: 4px solid black;
+  border-radius: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   max-height: 90vh;
-  box-shadow: 6px 6px black;
-  /* background-color: rgba(255, 255, 255, 0.499); */
-  z-index: 100;
+  box-shadow: 4px 5px 11px -2px #00000078, inset 4px 5px 6px -4px #ffffff;
+  background-color: rgba(255, 255, 255, 0.373);
+  /* z-index: 100; */
+  /* color: #d3b752; */
 }
 
 @media screen and (min-width: 250px) {
@@ -55,6 +56,7 @@
 
 .App-header {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 20px;
+  left: 20px;
+  font-size: 1.2rem;
 }
