--- a/src/Styles/CadAr.css
+++ b/src/Styles/CadAr.css
@@ -1,11 +1,22 @@
-/* #arjs-video {
+#arjs-video {
     z-index: 150 !important;
 }
 
 canvas {
+    top: 0;
+    left: 0;
     z-index: 200 !important;
-} */
+    position: fixed;
+}
 
+.cad-back-home {
+    z-index: 2500 !important;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+}
+
+/* 
 #arjs-video,
 canvas {
     all: unset;
@@ -100,4 +111,4 @@ canvas {
     canvas {
         height: 700px !important;
     }
-}
+} */
