--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -6,11 +6,15 @@
 }
 
 body {
-  /* background: rgb(223,137,194);
-  background: linear-gradient(58deg, rgba(223,137,194,0.3925945378151261) 0%, rgba(185,217,246,1) 100%); */
-  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: 'Roboto', sans-serif;
+}
+
+body {
+  /* background: linear-gradient(-45deg, #ffffff, #ffffff, #f6fffe, #ffffff); */
+  /* background-size: 400% 400%; */
+  background-color: rgb(227, 227, 227);
+  height: 100vh;
 }
