--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -53,10 +53,20 @@
   }
 }
 
+.App {
+  padding: 20px 15px;
+}
+
 
 .App-header {
   position: absolute;
   top: 20px;
   left: 20px;
+  font-size: 1.2rem;
+}
+
+.files-preview-container>.App-header {
+  position: initial;
+  width: 100%;
   font-size: 1.2rem;
 }
