--- a/src/Styles/modelPreview.css
+++ b/src/Styles/modelPreview.css
@@ -11,6 +11,11 @@
     border-radius: 10%;
 }
 
+.marker-preview:hover,
+.model-preview:hover {
+    cursor: pointer;
+}
+
 .file-preview-card {
     display: flex;
     width: 100%;
@@ -20,8 +25,8 @@
 .files-preview {
     overflow-y: auto;
     overflow-x: hidden;
-    max-height: 350px;
     width: 90%;
+    height: 80%;
 }
 
 .files-preview-container {
