--- a/src/Styles/modelPreview.css
+++ b/src/Styles/modelPreview.css
@@ -1,14 +1,19 @@
 .file-preview-card>.model-preview {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     border-radius: 10%;
 }
 
 .canvas-model-preview,
 .canvas-model-preview>canvas {
-    width: 200px !important;
-    height: 200px !important;
+    width: 250px !important;
+    height: 250px !important;
     border-radius: 10%;
+}
+
+.marker-preview {
+    width: 250px;
+    height: 250px;
 }
 
 .marker-preview:hover,
@@ -18,7 +23,9 @@
 
 .file-preview-card {
     display: flex;
-    width: 100%;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     margin: 10px;
 }
 
@@ -27,6 +34,9 @@
     overflow-x: hidden;
     width: 90%;
     height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .files-preview-container {
